# ams-management

asset-management/: README.md  db.sqlite3  dbBackup.sqlite3  error.txt  pyproject.toml  requirements.txt
asset-management/accounts/: admin.py  models.py  urls.py  views.py
asset-management/accounts/migrations/: 0001_initial.py  0002_auto_20191128_1018.py  0003_auto_20191128_1025.py  0004_auto_20191128_1041.py  0005_auto_20200319_1813.py  0006_userinfo_card.py
asset-management/assets/: Untitled-1  settings.py  urls.py
asset-management/manage_asset/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
asset-management/manage_asset/migrations/: 0001_initial.py  0002_category.py  0003_locations.py  0004_nonassets_is_assigned.py  0005_assetrequest.py  0006_assigned_assets.py  0007_auto_20191206_0132.py  0008_auto_20191206_0137.py  0009_auto_20191206_0158.py  0010_lended_assets.py  0011_lended_assets_recivername.py  0012_auto_20200304_1655.py  0013_auto_20200306_0859.py  0014_auto_20200306_1000.py  0015_auto_20200306_1002.py  0016_auto_20200306_1002.py  0017_auto_20200306_1006.py  0018_auto_20200306_1007.py  0019_auto_20200306_1034.py  0020_nonassets_updated_on.py  (+42 more)
asset-management/mlinzi/: admin.py  apps.py  models.py  urls.py  views.py
asset-management/myapi/: admin.py  models.py  serializer.py  urls.py  views.py
asset-management/owner/: admin.py  models.py  urls.py  views.py
asset-management/secretary/: apps.py  urls.py  views.py
asset-management/static/: style.css
asset-management/template/: index.html  layout.html  navs.html
(+75 files in other folders)
